--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "package": "^1.0.1"
   }
 }
