--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "eat da burger",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,6 @@
     "method-override": "^3.0.0",
     "mysql": "^2.16.0",
     "package": "^1.0.1"
-  }
+  },
+  "devDependencies": {}
 }
