--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
-    "database": "burgers_db",
-    "host": "localhost",
+    "username": "wlc3y2fkpcetmy1t",
+    "password": "fjcblwezgv6imv35",
+    "database": "earcelg3a1v98idw",
+    "host": "l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
